Update document.md